--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ frameborder="0">
 Seu navegador não é compativel.
 </iframe>
     </section>
-    <section id="redes-socias">
+    <section id="redes-sociais">
         <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
         <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
         <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
